# LatentScalpel

./: .gitignore  main.py  pyproject.toml  remote_mcp_server.py
configs/: activation_collection.yaml  activation_collection_test.yaml  activation_collection_val.yaml  collect_t5_activations.yaml  collect_t5_activations_val.yaml  correlate_features.yaml  eval_layer4_iterative.yaml  eval_layer4_single_step.yaml  eval_layer5_iterative.yaml  eval_layer5_single_step.yaml  evaluation.yaml  example_xsum.yaml  find_top_examples.yaml  find_top_examples_layer0.yaml  find_top_examples_layer1.yaml  find_top_examples_layer4.yaml  find_top_examples_layer5.yaml  find_top_examples_plaid_finetuned_v3b.yaml  find_top_examples_t5.yaml  interpret_features.yaml  interpret_features_layer0.yaml  interpret_features_layer1.yaml  interpret_features_layer4.yaml  interpret_features_layer5.yaml  interpret_features_plaid_finetuned_v3b.yaml  interpret_features_t5_layer0.yaml  interpret_features_t5_layer11.yaml  interpret_features_t5_layer23.yaml  intervention.yaml  intervention_enforce_early_layer0.yaml  intervention_suppress_midpoint_layer0.yaml  plaid_activation_collection.yaml  plaid_activation_collection_val.yaml  plaid_evaluation.yaml  plaid_finetuned_collection_test.yaml  plaid_finetuned_collection_train.yaml  plaid_finetuned_collection_val.yaml  plaid_original_xsum_generate.yaml  plaid_token_guidance.yaml  plaid_token_guidance_bugfix_test.yaml  (+31 more)
docs/: feature_classification_categories.md  pipeline_stages.md
geniesae/: __init__.py  activation_collector.py  activation_patcher.py  config.py  (+19 more)
(+50 files in other folders)
